src/styles/_Details.scss
.detailsPage {
  width: 100%;
  display: flex;
}

/** Left **/

.detailsPage-left {
  position: fixed;
  width: 150px;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  background: #E4E4E5;
  padding: 8px 8px;
}
.detailsPage-left > button,
.detailsPage-left > div > button {
  margin-top: 8px;
  width: 100%;
}

/** Right **/

.detailsPage-right {
  display: flex;
  flex-direction: column;
  margin-left: 166px;
  width: 100%;
  padding: 8px;
  overflow-y: scroll;
}
.detailsPage-row {
  margin-bottom: 8px;
  margin-top: 8px;
}
.detailsPage-genre {
  display: inline-block;
  padding-bottom: 8px;
}
.detailsPage-row > h1 {
  margin-bottom: 2px;
}
.detailsPage-genre > ul {
  margin: 0;
  padding: 0;
}
.detailsPage-genre > ul > li {
  display: inline;
  padding: 0px 4px;
  opacity: 0.6;
  color: black;
}
.detailsPage-genre > ul > li:first-child {
  padding: 0px 4px 0px 0px;
}
.detailsPage-score {
  display: flex;
}
.detailsPage-score-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-left: 16px;
}
.detailsPage-score-info > h5 {
  margin-top: 0;
}
.detailsPage-score-info > span {
  display: inline-flex;
  justify-content: center;
  align-items: center;
}
.detailsPage-score-info > span > h5 {
  margin: 0;
  margin-right: 4px;
}
.detailsPage-score-info h5 span {
  font-size: 20px;
}
.detailsPage-score-info h5 span:nth-child(2) {
  color: #6A1B9A;
}
.detailsPage-miniCards {
  display: inline-flex;
  flex-wrap: wrap;
}
.detailsPage-miniCards > .card {
  margin-top: 4px;
  text-align: center;
  padding: 8px;
}
.detailsPage-miniCards > .card > .title {
  margin-bottom: 6px;
  margin: -4px -8px 12px -8px
}
.detailsPage-miniCards > .card > p, .score-select {
  font-size: 18px;
  margin: 1px 0px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.mini-card-title {
  margin: 0;
  margin-bottom: 2px;
}
.score-circle-div {
  position: relative;
}
.score-circle-div:after {
  content:attr(data-score);
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  font-size: 20px;
  font-weight: 500;
  color: #6A1B9A;
}

/*Fix this*/
// .content {
//   width: auto!important;
//   height: auto!important;
// }


.card .title {
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  margin: -4px -16px 12px -16px;
  padding-left: 16px;
  padding-right: 16px;
}
.detailsPage-card-item {
  margin-bottom: 16px;
}


/* Progress Interactions */
.progressInteractions {
  width: 100%;
  background-color: white;
  box-shadow: 0px 2px 4px rgba(128, 128, 128, 0.3);
  margin: 4px 0px;
  border-radius: 4px;
  height: 0;
  opacity: 0;
  animation: openProgress .8s;
  animation-fill-mode: forwards;
}
@keyframes openProgress {
  from { }
  to {
    opacity: 1;
    height: 68px;
  }
}
.progressInteractions > .title {
  border-bottom: 1px solid rgba(128, 128, 128, 0.3);
  text-align: center;
  padding: 4px 0px;
  height: 19px;
  vertical-align: middle;
}
.progressInteractions > .interactions {
  display: flex;
  justify-content: space-between;
}
.interactions > .number {
  width: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: white;
}
.interactions > .number > span,
.interactions > .number > input {
  font-size: 18px;
}
.interactions > .number > input {
  width: 40%;
  height: 75%;
  border: none;
  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
  outline: none;
  text-align: center;
}
.interactions > .minus,
.interactions > .plus {
    width: 48px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    outline: none;
    border: none;
    transition: .3s all;
    background-color: white;
}
.interactions > .minus {
  color: #D32F2F;
  border-bottom-left-radius: 4px;
}
.interactions > .minus:active {
  background-color: #D32F2F;
  color: white;
}
.interactions > .plus {
  color: #689F38;
  border-bottom-right-radius: 4px;
}
.interactions > .plus:active {
  background-color: #689F38;
  color: white;
}


/*fab*/
.fab {
  height: 60px;
  width: 60px;
  position: fixed;
  right: 25px;
  bottom: 25px;
  background-color: #D32F2F;
  box-shadow: 0px 0px 4px rgba(12, 12, 12, 0.4);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 24px;
  color: white;
  font-weight: bold;
}

